# xavier

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  install.sh  uninstall.sh  validate-install-triples.sh  validate-shell-degradation.sh  validate-skills.sh  validate-xavier-frontmatter.sh
.github/workflows/: ci.yml  release.yml
docs/: ux-audit.md
references/adapters/claude-code/: adapter.md
references/patterns/: shark.md
references/personas/: correctness.md  performance.md  security.md
scripts/: release.sh
skills/add-dep/: SKILL.md
skills/babysit/: SKILL.md
skills/deps-update/: SKILL.md
skills/export/: SKILL.md
skills/grill/: SKILL.md
skills/learn/: SKILL.md
skills/prd/: SKILL.md
skills/review/: SKILL.md
skills/setup/: SKILL.md
skills/tasks/: SKILL.md
skills/uninstall/: SKILL.md
tool/: Cargo.toml
tool/crates/core/: Cargo.toml
tool/crates/core/src/: cache.rs  findings.rs  lib.rs  merge.rs  model.rs  refs.rs  render.rs  similarity.rs
tool/crates/core/tests/: golden.rs  merge.rs  prose_recovery.rs  render.rs
tool/crates/core/tests/fixtures/: corr_gemini.txt  corr_gpt.txt  perf_gemini.txt  perf_gpt.txt  sec_gemini.txt  sec_gpt.txt
tool/crates/xavier-tool/: Cargo.toml
tool/crates/xavier-tool/src/: main.rs
tool/crates/xavier-tool/tests/: cli.rs
xavier/: SKILL.md  install.sh
xavier/references/adapters/: ADAPTER-CONTRACT.md
xavier/references/adapters/claude-code/: adapter.md
xavier/references/adapters/codex/: adapter.md
xavier/references/adapters/cursor/: adapter.md
xavier/references/formats/: zettelkasten.md
xavier/references/patterns/: backpressure-detection.md  debate.md  destructive-ops.md  monorepo-detection.md  shark.md  skill-delegation.md
xavier/references/personas/: correctness.md  performance.md  security.md
xavier/skills/add-dep/: SKILL.md
xavier/skills/ask/: SKILL.md
xavier/skills/babysit/: SKILL.md
xavier/skills/bug/: SKILL.md
xavier/skills/deps-update/: SKILL.md
xavier/skills/export/: SKILL.md
xavier/skills/feedback/: SKILL.md
xavier/skills/grill/: SKILL.md
xavier/skills/investigate/: SKILL.md
xavier/skills/learn/: SKILL.md
xavier/skills/loop/: SKILL.md
xavier/skills/mark/: SKILL.md
xavier/skills/prd/: SKILL.md
xavier/skills/remove-dep/: SKILL.md
xavier/skills/research/: SKILL.md
xavier/skills/review/: SKILL.md
xavier/skills/self-update/: SKILL.md
xavier/skills/setup/: SKILL.md
xavier/skills/tasks/: SKILL.md
xavier/skills/teach/: SKILL.md
xavier/skills/uninstall/: SKILL.md
