[workspace]
resolver = "2"
members = ["crates/core", "crates/xavier-tool"]

# Shared metadata and dependency versions for every crate in the workspace.
# Phase 1 keeps the runtime dependency tree intentionally lean: serde +
# serde_json only. No CLI-arg framework, no error crate — the surface is a
# single subcommand reading stdin and writing stdout.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/atilafassina/xavier"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optimize release binaries for size — they ship inside the Xavier tarball,
# so smaller is strictly better and the merge work is not CPU-bound.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
